fix: replace getFirst() with JDK17 available get(0)